--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,6 +17,7 @@
         "name": "next"
       }
     ],
+    "typeRoots": ["./types", "./node_modules/@types"],
     "paths": {
       "@/*": ["./*"]
     }
